fix layout issue on form page when errors

--- a/Front-End/assets/css/form-page.css
+++ b/Front-End/assets/css/form-page.css
@@ -5,7 +5,6 @@
 }
 
 .form-input-wrapper {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: var(--len-xs);
+    display: flex;
+    flex-direction: column;
 }
